tests/baselines/reference/parserForInStatement5.errors.txt
==== tests/cases/compiler/parserForInStatement5.ts (2 errors) ====
    for (var a: number in X) {
         ~~~~~~~~~~~~~
!!! parserForInStatement5.ts(1,6): error TS2115: Variable declarations of a 'for' statement cannot use a type annotation.
                          ~
!!! parserForInStatement5.ts(1,23): error TS2095: Cannot find name 'X'.
    }